--- a/escale.html
+++ b/escale.html
@@ -34,7 +34,7 @@
 <body>
   <main class="mb-[47px] z-10 overflow-hidden bg-white block">
     <header class="relative block">
-      <nav class="relative z-50 flex flex-wrap items-center justify-between w-full px-8 py-4 text-lg bg-white  md:py-0">
+      <nav class="relative z-50 flex flex-wrap items-center justify-between w-full px-8 py-4 text-lg bg-white md:py-0">
         <div>
           <a href="#" class="text-3xl font-bold link-home">
             <img src="../assets/cropped-Logo-Escale-Bantoo-2-1.png" class="h-16" alt="">
@@ -47,7 +47,7 @@
         </svg>
 
         <div class="hidden w-full md:flex md:items-center md:w-auto" id="menu">
-          <ul class="pt-4 text-base text-gray-700  md:flex md:justify-between md:pt-0">
+          <ul class="pt-4 text-base text-gray-700 md:flex md:justify-between md:pt-0">
             <li>
               <a class="block py-2 md:p-4 hover:text-eb" href="./index.html">Acceuil</a>
             </li>
@@ -80,7 +80,7 @@
       <div class="relative left-0 z-50 grid w-full grid-cols-1 lg:absolute lg:w-2/5 md:w-3/5">
         <div class="mx-4 my-20 text-5xl font-bold hero_text lg:text-7xl md:text-6xl lg:mx-14 md:mx-7">
           <div class="z-10 hero_title ">
-            <div class="text-transparent uppercase text-second leading-12">
+            <div class="uppercase text-sb leading-12">
               L’escale bantoo:
             </div>
             <p class="text-black">
@@ -512,7 +512,7 @@
               <div class="relative card-img-handler">
                 <div class="relative block overflow-hidden img-handler hover:duration-1000 h-1/2">
                   <img src="https://folio.webestica.com/assets/images/portfolio/07.jpg"
-                    class="absolute w-full h-full duration-1000  hover:scale-105" alt="">
+                    class="absolute w-full h-full duration-1000 hover:scale-105" alt="">
                   <div class="relative z-10 flex w-full px-6 py-4 text-white ">
                     <i class="text-4xl">
                       <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
@@ -523,7 +523,7 @@
                       microsoft</p>
                   </div>
                   <div class="mt-64 z-[2] px-6 py-4 ">
-                    <a href="#" class="absolute text-white  bottom-2">
+                    <a href="#" class="absolute text-white bottom-2">
                       <p class="text-xl font-bold">missing link</p>
                       <p class="text-sm">
                         these where the attributes that modern convern
@@ -538,7 +538,7 @@
               <div class="relative card-img-handler">
                 <div class="relative block overflow-hidden img-handler hover:duration-1000 h-1/2">
                   <img src="https://folio.webestica.com/assets/images/portfolio/07.jpg"
-                    class="absolute w-full h-full duration-1000  hover:scale-105" alt="">
+                    class="absolute w-full h-full duration-1000 hover:scale-105" alt="">
                   <div class="relative z-10 flex w-full px-6 py-4 text-white ">
                     <i class="text-4xl">
                       <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
@@ -549,7 +549,7 @@
                       microsoft</p>
                   </div>
                   <div class="mt-64 z-[2] px-6 py-4 ">
-                    <a href="#" class="absolute text-white  bottom-2">
+                    <a href="#" class="absolute text-white bottom-2">
                       <p class="text-xl font-bold">missing link</p>
                       <p class="text-sm">
                         these where the attributes that modern convern
@@ -564,7 +564,7 @@
               <div class="relative card-img-handler">
                 <div class="relative block overflow-hidden img-handler hover:duration-1000 h-1/2">
                   <img src="https://folio.webestica.com/assets/images/portfolio/07.jpg"
-                    class="absolute w-full h-full duration-1000  hover:scale-105" alt="">
+                    class="absolute w-full h-full duration-1000 hover:scale-105" alt="">
                   <div class="relative z-10 flex w-full px-6 py-4 text-white ">
                     <i class="text-4xl">
                       <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
@@ -575,7 +575,7 @@
                       microsoft</p>
                   </div>
                   <div class="mt-64 z-[2] px-6 py-4 ">
-                    <a href="#" class="absolute text-white  bottom-2">
+                    <a href="#" class="absolute text-white bottom-2">
                       <p class="text-xl font-bold">missing link</p>
                       <p class="text-sm">
                         these where the attributes that modern convern
@@ -608,7 +608,7 @@
     </div>
   </main>
 
-  <footer class="bottom-0 left-0 w-full h-full px-4 py-12 text-white bg-black bg-cover  md:px-8 lg:px-16">
+  <footer class="bottom-0 left-0 w-full h-full px-4 py-12 text-white bg-black bg-cover md:px-8 lg:px-16">
     <div class="grid grid-cols-1 gap-4 mx-8 lg:grid-cols-4 md:grid-cols-2">
       <div class="company-info">
         <img src="../assets/cropped-Logo-Escale-Bantoo-2-1.png" alt="">
