--- a/escale.html
+++ b/escale.html
@@ -78,13 +78,13 @@
         </div>
       </nav>
       <div class="relative left-0 z-50 grid w-full grid-cols-1 lg:absolute lg:w-2/5 md:w-3/5">
-        <div class="mx-4 my-20 text-5xl font-bold hero_text lg:text-7xl md:text-6xl lg:mx-14 md:mx-7">
+        <div class="mx-4 my-20 text-3xl font-bold hero_text lg:mx-14 md:mx-7">
           <div class="z-10 hero_title ">
-            <div class="uppercase text-sb leading-12">
+            <div class="uppercase text-second leading-12">
               L’escale bantoo:
             </div>
-            <p class="text-black">
-              Le programme escale Bantoo
+            <p class="text-black text-2xl">
+              Le programme <br>escale Bantoo
             </p>
           </div>
           <div class="mt-8">
@@ -456,7 +456,7 @@
                     <span class="ml-4 text-lg font-normal">10 selections au Masa off 2018 <br>
                       <ol>
                         <li>Queen Koumb, Myria Bika, Adango,Teety Tezano, </li>
-                        <li>Geneviève Matibeye, Estel Mveng, Licelv Mauwa, Nicole Obelé  </li>
+                        <li>Geneviève Matibeye, Estel Mveng, Licelv Mauwa, Nicole Obelé </li>
                       </ol>
                     </span>
                   </li>
@@ -495,7 +495,55 @@
         </div>
       </div>
     </section>
-    <section class="mx-4 mt-32 portfolio lg:mx-16 md:mx-8">
+    <section class="partenaire lg:mx-28 md:mx-14 mx-7 mt-32">
+      <div class="grid grid-cols-1 lg:grid-cols-2">
+        <div class="">
+          <p class="lg:text-7xl font-bold md:text-5xl text-3xl lgw-1/2">Nos Partenaires</p>
+          <p class="text-gray-700 text-xl mt-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Odio molestias cupiditate deleniti id, consequatur modi. Placeat at aliquid ea aspernatur deleniti debitis
+            nam natus saepe reiciendis dicta? Nihil, hic nam.</p>
+        </div>
+        <div class="grid md:grid-cols-4 grid-cols-3 lg:mt-0 mt-7 gap-8">
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+          <div class="partenaire">
+            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section class="mx-4 mt-32 portfolio lg:mx-16 md:mx-8">
       <div class="flex justify-between section-titles-handler">
         <h1 class="text-3xl text-transparent capitalize lg:text-7xl md:text-5xl bold stroke-transparent">Latest case
           study</h1>
@@ -591,7 +639,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <div class="p-5 mx-4 mt-4 teaser lg:mt-16 md:mt-8 md:mx-16 lg:mx-32 lg:p-20 md:p-10">
       <div class="grid grid-cols-1 gap-4 lg:grid-cols-2 md:grid-cols-1">
         <div class="left_el">
@@ -693,8 +741,7 @@
               <input type="email" name="" class="px-4 py-1 mt-5 text-lg text-black outline-0" id="">
             </div>
             <div class="relative submit-btn">
-              <button type="submit"
-                class="relative px-4 py-2 mt-5 font-bold text-white capitalize w-36 md:mt-5 bg-eb">
+              <button type="submit" class="relative px-4 py-2 mt-5 font-bold text-white capitalize w-36 md:mt-5 bg-eb">
                 suscribe
               </button>
             </div>
