--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a class="md:p-4 py-2 block hover:text-eb" href="./index.html">Acceuil</a>
             </li>
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="./escale.html">L’Escale Bantoo </a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./escale.html">Le programme</a>
             </li>
             <li>
               <a class="md:p-4 py-2 block hover:text-eb" href="./salon.html">Le Salon</a>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="quote lg:block md:block hidden">
-          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">offres</a>
+          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
       <div class="bckg-slider   h-screen  ">
@@ -674,54 +674,7 @@
           </div>
         </div>
       </section> -->
-    <section class="partenaire lg:mx-28 md:mx-14 mx-7 mt-32">
-      <div class="grid grid-cols-1 lg:grid-cols-2">
-        <div class="">
-          <p class="lg:text-7xl font-bold md:text-5xl text-3xl lgw-1/2">Nos Partenaires</p>
-          <p class="text-gray-300 text-xs lg:text-sm mt-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Odio molestias cupiditate deleniti id, consequatur modi. Placeat at aliquid ea aspernatur deleniti debitis
-            nam natus saepe reiciendis dicta? Nihil, hic nam.</p>
-        </div>
-        <div class="grid lg:grid-cols-5 md:grid-cols-4 grid-cols-3 lg:mt-0 mt-7 gap-4">
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-        </div>
-      </div>
-    </section>
+    
     <div class="teaser lg:mx-32 md:mx-16 mx-6 mt-32">
       <div class="lg:grid grid-cols-2 grid-cols-1 ">
         <div class="element relative ">
