--- a/salon.html
+++ b/salon.html
@@ -160,7 +160,7 @@
       </div>
     </section>
     <section class="awards-honor lg:mx-24 md:mx-12 mx-6 mt-32">
-      <h2 class="lg:text-7xl md:text-3xl text-2xl font-bold stroke-black-none text-transparent">Awards & honor</h2>
+      <h2 class="lg:text-7xl md:text-3xl text-2xl font-bold stroke-black-none text-transparent">Interview</h2>
       <div class="grid md:grid-cols-2 grid-cols-1 lg:grid-cols-3 gap-4 space-y-4 mt-14">
         <div class="awards-card space-y-3">
           <div class="year text-white bg-black px-1 inline-block py-1">2016</div>
