--- a/about.html
+++ b/about.html
@@ -37,89 +37,65 @@
  <main class=" mb-[47px] overflow-hidden z-10 bg-white block">
   <header class="overflow-hidden block relative">
     
-    <nav
-    class="
-    z-50
-    relative
-      flex flex-wrap
-      items-center
-      justify-between
-      w-full
-      py-4
-      md:py-0
-      px-8
-      text-lg 
-      bg-white
-    "
-  >
-   <div>
-      <a href="#" class="link-home font-bold text-3xl">
-        <img src="../assets/cropped-Logo-Escale-Bantoo-2-1.png" class="h-16" alt="">
-      </a>
-    </div>
-   
-     <svg
-        xmlns="http://www.w3.org/2000/svg"
-        id="menu-button"
-        class="h-6 w-6 cursor-pointer md:hidden block"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M4 6h16M4 12h16M4 18h16"
-        />
-      </svg>
-   
-   <div class="hidden w-full md:flex md:items-center md:w-auto" id="menu">
-      <ul
-        class="
-          pt-4
-          text-base text-gray-700
-          md:flex
-          md:justify-between 
-          md:pt-0"
-      >
-        <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="./index.html"
-            >Acceuil</a
-          >
-        </li>
-        <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="./services.html"
-            >Service</a
-          >
-        </li>
-        <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="./about.html"
-            >A propos</a
-          >
-        </li>
-        <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="./contact.html"
-            >Contact</a
-          >
-        </li>
-        <!-- <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="../event/index.html"
-            >Evenement</a
-          >
-        </li>
-        <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="../artist/index.html"
-            >Artiste</a
-          >
-        </li> -->
-      </ul>
-    </div>
-    
-    <div class="quote lg:block md:block hidden">
-      <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">offres</a>
-    </div>
-</nav>
+    <nav class="
+        z-50
+        relative
+          flex flex-wrap
+          items-center
+          justify-between
+          w-full
+          py-4
+          md:py-0
+          px-8
+          text-lg 
+          bg-white
+        ">
+        <div>
+          <a href="#" class="link-home font-bold text-3xl">
+            <img src="./assets/cropped-Logo-Escale-Bantoo-2-1.png" class="w-16" alt="">
+          </a>
+        </div>
+
+        <svg xmlns="http://www.w3.org/2000/svg" id="menu-button" class="h-6 w-6 cursor-pointer md:hidden block"
+          fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+
+        <div class="hidden w-full md:flex md:items-center md:w-auto" id="menu">
+          <ul class="
+              pt-4
+              text-base text-gray-700
+              md:flex
+              md:justify-between 
+              md:pt-0">
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./index.html">Acceuil</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./escale.html">Le programme</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./salon.html">Le Salon</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Global Music Hub</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Music Business Session</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Escale Music</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="quote lg:block md:block hidden">
+          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
+        </div>
+      </nav>
     <div class="bg-teaserBg bg-cover h-96 lg:py-72 md:py-36 py-18 bg-center ">
       <div class="description text-white absolute md:top-12 lg:top-32 z-10 md:mx-16 mx-8 lg:mx-32">
         <h1 class="mt-7 w-2/3 lg:text-5xl md:text-2xl text-xl xs:text-lg font-bold">
