--- a/escale.html
+++ b/escale.html
@@ -34,47 +34,63 @@
 <body>
   <main class="mb-[47px] z-10 overflow-hidden bg-white block">
     <header class="relative block">
-      <nav class="relative z-50 flex flex-wrap items-center justify-between w-full px-8 py-4 text-lg bg-white md:py-0">
+      <nav class="
+        z-50
+        relative
+          flex flex-wrap
+          items-center
+          justify-between
+          w-full
+          py-4
+          md:py-0
+          px-8
+          text-lg 
+          bg-white
+        ">
         <div>
-          <a href="#" class="text-3xl font-bold link-home">
-            <img src="../assets/cropped-Logo-Escale-Bantoo-2-1.png" class="h-16" alt="">
+          <a href="#" class="link-home font-bold text-3xl">
+            <img src="./assets/cropped-Logo-Escale-Bantoo-2-1.png" class="w-16" alt="">
           </a>
         </div>
 
-        <svg xmlns="http://www.w3.org/2000/svg" id="menu-button" class="block w-6 h-6 cursor-pointer md:hidden"
+        <svg xmlns="http://www.w3.org/2000/svg" id="menu-button" class="h-6 w-6 cursor-pointer md:hidden block"
           fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
 
         <div class="hidden w-full md:flex md:items-center md:w-auto" id="menu">
-          <ul class="pt-4 text-base text-gray-700 md:flex md:justify-between md:pt-0">
+          <ul class="
+              pt-4
+              text-base text-gray-700
+              md:flex
+              md:justify-between 
+              md:pt-0">
             <li>
-              <a class="block py-2 md:p-4 hover:text-eb" href="./index.html">Acceuil</a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./index.html">Acceuil</a>
             </li>
             <li>
-              <a class="block py-2 md:p-4 hover:text-eb" href="./services.html">Service</a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./escale.html">Le programme</a>
             </li>
             <li>
-              <a class="block py-2 md:p-4 hover:text-eb" href="./about.html">A propos</a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./salon.html">Le Salon</a>
             </li>
             <li>
-              <a class="block py-2 md:p-4 hover:text-eb" href="./contact.html">Contact</a>
-            </li>
-            <!-- <li>
-              <a class="block py-2 md:p-4 hover:text-eb" href="../event/index.html"
-                >Evenement</a
-              >
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Global Music Hub</a>
             </li>
             <li>
-              <a class="block py-2 md:p-4 hover:text-eb" href="../artist/index.html"
-                >Artiste</a
-              >
-            </li> -->
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Music Business Session</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Escale Music</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./contact.html">Contact</a>
+            </li>
           </ul>
         </div>
 
-        <div class="hidden quote lg:block md:block">
-          <a href="#" class="px-4 py-2 font-bold text-white capitalize bg-eb">offres</a>
+        <div class="quote lg:block md:block hidden">
+          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
       <div class="relative left-0 z-50 grid w-full grid-cols-1 lg:absolute lg:w-2/5 md:w-3/5">
