--- a/salon.html
+++ b/salon.html
@@ -40,21 +40,21 @@
     <header class="overflow-hidden block relative">
 
       <nav class="
-    z-50
-    relative
-      flex flex-wrap
-      items-center
-      justify-between
-      w-full
-      py-4
-      md:py-0
-      px-8
-      text-lg 
-      bg-white
-    ">
+        z-50
+        relative
+          flex flex-wrap
+          items-center
+          justify-between
+          w-full
+          py-4
+          md:py-0
+          px-8
+          text-lg 
+          bg-white
+        ">
         <div>
           <a href="#" class="link-home font-bold text-3xl">
-            <img src="../assets/cropped-Logo-Escale-Bantoo-2-1.png" class="h-16" alt="">
+            <img src="./assets/cropped-Logo-Escale-Bantoo-2-1.png" class="w-16" alt="">
           </a>
         </div>
 
@@ -65,38 +65,37 @@
 
         <div class="hidden w-full md:flex md:items-center md:w-auto" id="menu">
           <ul class="
-          pt-4
-          text-base text-gray-700
-          md:flex
-          md:justify-between 
-          md:pt-0">
+              pt-4
+              text-base text-gray-700
+              md:flex
+              md:justify-between 
+              md:pt-0">
             <li>
               <a class="md:p-4 py-2 block hover:text-eb" href="./index.html">Acceuil</a>
             </li>
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Service</a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./escale.html">Le programme</a>
             </li>
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="./about.html">A propos</a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./salon.html">Le Salon</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Global Music Hub</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Music Business Session</a>
+            </li>
+            <li>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Escale Music</a>
             </li>
             <li>
               <a class="md:p-4 py-2 block hover:text-eb" href="./contact.html">Contact</a>
             </li>
-            <!-- <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="../event/index.html"
-            >Evenement</a
-          >
-        </li>
-        <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="../artist/index.html"
-            >Artiste</a
-          >
-        </li> -->
           </ul>
         </div>
 
         <div class="quote lg:block md:block hidden">
-          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">offres</a>
+          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
       <div class="bg-teaserBg bg-cover h-96 lg:py-72 md:py-36 py-18 bg-center ">
