--- a/salon.html
+++ b/salon.html
@@ -86,7 +86,7 @@
               <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Music Business Session</a>
             </li>
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Escale Music</a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./escale-music.html">Escale Music</a>
             </li>
             <li>
               <a class="md:p-4 py-2 block hover:text-eb" href="./contact.html">Contact</a>
