--- a/salon.html
+++ b/salon.html
@@ -92,12 +92,13 @@
               <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
             </div>
           </nav>
-          <div class=" w-full bg-eventbg bg-center bg-cover block h-96 text-center  overflow-hidden">
-            <div class="bg-gradient-to-tr w-full h-full from-second to-transparent flex justify-center items-center">
+          <div class=" w-full bg-eventbg bg-center bg-cover block h-full text-center overflow-hidden">
+            <div class="bg-gradient-to-tr w-full h-full from-second to-transparent flex py-8 justify-center items-center">
                 
                 <div class=" flex justify-center flex-col gap-8 w-full items-center">
                     <img class="w-64" src="./assets/cropped-Logo-Escale-Bantoo-2-1.png" alt="">
-                    <div class="flex gap-16">
+                    <a href="#" class="inline-block bg-eb text-white text-xl py-2 px-3 rounded-xl">S'inscrire a l'evenement</a>
+                    <div class="flex gap-4">
                         <div class="day font-bold text-3xl text-white bg-eb px-2 py-2 rounded-xl"></div>
                         <div class="hours font-bold text-3xl text-white bg-eb px-2 py-2 rounded-xl"></div>
                         <div class="min font-bold text-3xl text-white bg-eb px-2 py-2 rounded-xl"></div>
@@ -135,12 +136,12 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="h-full w-full" src="https://www.eaie.org/.imaging/mte/eaie-theme/full-width-large/dam/images/blog-images/2021/1000x667_Blog_Return-to-in-person.jpg/jcr:content/1000x667_Blog_Return%20to%20in-person.jpg" alt="">
+                    <img class="h-full w-full rounded-xl" src="https://www.eaie.org/.imaging/mte/eaie-theme/full-width-large/dam/images/blog-images/2021/1000x667_Blog_Return-to-in-person.jpg/jcr:content/1000x667_Blog_Return%20to%20in-person.jpg" alt="">
                 </div>
             </div>
             <div class="grid md:grid-cols-2 grid-cols-1">
                 <div class="img">
-                    <img class="h-full w-full" src="https://www.eaie.org/.imaging/mte/eaie-theme/full-width-large/dam/images/blog-images/2021/1000x667_Blog_Return-to-in-person.jpg/jcr:content/1000x667_Blog_Return%20to%20in-person.jpg" alt="">
+                    <img class="h-full w-full rounded-xl" src="https://www.eaie.org/.imaging/mte/eaie-theme/full-width-large/dam/images/blog-images/2021/1000x667_Blog_Return-to-in-person.jpg/jcr:content/1000x667_Blog_Return%20to%20in-person.jpg" alt="">
                 </div>
                 <div class=" px-4 py-4 space-y-6">
                     <h2 class="uppercase text-center text-second font-bold text-4xl">
@@ -193,7 +194,7 @@ et des chaines de télévision partenaires
                     </div>
                 </div>
                 <div class="img">
-                    <img class="h-full w-full" src="https://baselunaire.com/medias/comment-vendre-en-ligne.jpg" alt="">
+                    <img class="h-full w-full rounded-xl" src="https://baselunaire.com/medias/comment-vendre-en-ligne.jpg" alt="">
                 </div>
             </div>
         </section>
