--- a/salon.html
+++ b/salon.html
@@ -110,7 +110,7 @@
             
           </div>
         </header>
-        <section class="mt-16 lg:mx-16 space-y-12 md:mx-2">
+        <section class="mt-16 lg:mx-16 space-y-12 mx-2">
             <div class="grid md:grid-cols-2 grid-cols-1">
                 <div class=" px-4 py-4 space-y-6">
                     <h2 class="uppercase text-center text-second font-bold text-4xl">
@@ -132,7 +132,7 @@
                         <h2 class="text-3xl text-second font-bold capitalize">
                             programme
                         </h2>
-                        <div class="text-base text-white before:content[''] before:h-1 before:w-4 before:bg-eb before:absolute relative before:top-3 ml-5 before:left-[-17px]">session theorique en ligne</div>
+                        <div class="text-base before:content[''] before:h-1 before:w-4 before:bg-eb before:absolute relative before:top-3 ml-5 before:left-[-17px]">session theorique en ligne</div>
                     </div>
                 </div>
                 <div class="img">
@@ -181,7 +181,7 @@ dans le secteur culturel.
 l’opportunité de se produire devant des directeurs de salons et festivals
 internationaux de musique, des Bookers, des responsables d’institutions et des journalistes des médias nationaux et internationaux. 
                     </p>
-                    <div class="text-base text-white">
+                    <div class="text-base ">
                         La sélection officielle de la 6ème édition du Salon de l’Escale Bantoo
 comptera 14 jeunes chanteuses proposés par un jury international.
 Le Salon s’ouvrira sur un concert qui réunira les chanteuses de la Résidence de création. Les 14 artistes sélectionnés se produiront sur les
