--- a/escale-music.html
+++ b/escale-music.html
@@ -88,7 +88,7 @@
             </div>
     
             <div class="quote lg:block md:block hidden">
-              <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
+              <a href="./edition.html" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
             </div>
           </nav>
           <div class="bg-second h-full  w-full shadow-xl">
@@ -110,7 +110,7 @@
                         </p>
                     </div>
                     <div class="logo flex items-center justify-center ">
-                        <img src="./assets/cropped-Logo-Escale-Bantoo-2-1.png" class="h-72 " alt="">
+                        <img src="./assets/logo escale music.png" class="h-72 " alt="">
                     </div>
                 </div>
             </div>
