--- a/escale.html
+++ b/escale.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="quote lg:block md:block hidden">
-          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
+          <a href="./edition.html" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
       <div class="relative left-0 z-50 grid w-full grid-cols-1 lg:absolute lg:w-2/5 md:w-3/5">
@@ -115,11 +115,11 @@
         <div class="hero__img_bg ">
           <div class="grid grid-cols-2 ml-64">
             <div class="center-img ">
-              <img src="https://folio.webestica.com/assets/images/about/03.jpg" class="" alt="">
+              <img src="./assets//LE PROGRAMME.jpg" class="h-full" alt="">
             </div>
             <div class="overlay_img">
               <div class="right_img mt-32 ml-[-15px] w-48">
-                <img src="https://folio.webestica.com/assets/images/about/04.jpg" alt="">
+                <img src="./assets/LE PROGRAMME_2.jpg" alt="">
               </div>
               <div class="absolute right-0 z-20 top-10">
                 <figure class="">
@@ -284,7 +284,7 @@
           <div class="lg:col-span-3 lg:order-last">
             <div class="relative overflow-hidden">
               <img class="object-cover w-full h-full"
-                src="https://landingfoliocom.imgix.net/store/collection/dusk/images/features/11/woman.png" alt="" />
+                src="./assets/UN IMPACT_.JPG" class="h-full" alt="" />
               <div class="absolute bottom-0 left-0">
                 <a href="#" title="" class="inline-flex items-center px-5 py-3 text-base font-normal bg-black"
                   role="button">
@@ -506,7 +506,7 @@
 
           <div class="lg:col-span-3">
             <img class="w-full xl:h-full xl:object-cover rounded-3xl"
-              src="https://landingfoliocom.imgix.net/store/collection/saasui/images/features/2/feature-2.svg" alt="" />
+              src="./assets/Affiche ESCALE BANTOO EN CANARIAS.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -519,43 +519,20 @@
             Odio molestias cupiditate deleniti id, consequatur modi. Placeat at aliquid ea aspernatur deleniti debitis
             nam natus saepe reiciendis dicta? Nihil, hic nam.</p>
         </div>
-        <div class="grid md:grid-cols-4 grid-cols-3 lg:mt-0 mt-7 gap-8">
+        <div class="grid grid-cols-3 lg:mt-0 mt-7 gap-8">
           <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+            <img src="./assets/Logo Masa.png" class="w-full" alt="">
           </div>
           <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+            <img src="./assets/Logo partenaire_2.png" class="w-full" alt="">
           </div>
           <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+            <img src="./assets/LOGO parteniare_1.png" class="w-full" alt="">
           </div>
           <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
+            <img src="./assets//logo vox africa.png" class="w-full" alt="">
           </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
-          <div class="partenaire">
-            <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
-          </div>
+          
         </div>
       </div>
     </section>
