--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="quote lg:block md:block hidden">
-          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
+          <a href="./edition.html" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
       <div class="bckg-slider   h-screen  ">
