--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="quote lg:block md:block hidden">
-          <a href="#" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
+          <a href="./edition.html" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
         <section class="h-full overflow-hidden ">
