--- a/salon.html
+++ b/salon.html
@@ -99,7 +99,7 @@
           <a href="./edition.html" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
-      <div class="bg-eventbg bg-contain bg-no-repeat w-full lg:py-72 md:py-36 py-18  bg-center ">
+      <div class="bg-eventbg bg-contain bg-no-repeat w-screen md:h-screen h-96 lg:py-72 md:py-36 py-18  bg-center ">
         <div class="description text-white absolute md:top-12 lg:top-32 z-10 md:mx-16 mx-8 lg:mx-32">
           <h1 class="mt-7 w-2/3 lg:text-5xl md:text-2xl text-xl xs:text-lg font-bold">
             LE SALON DE L’ESCALE BANTOO
