--- a/edition.html
+++ b/edition.html
@@ -92,12 +92,12 @@
               <a href="./edition.html" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
             </div>
           </nav>
-          <div class=" w-full bg-eventbg  bg-cover block h-screen text-center overflow-hidden">
-            <div class="bg-gradient-to-tr w-full h-screen from-second to-transparent flex py-8 justify-center items-center">
+          <div class=" w-full bg-eventbg  bg-cover h-96 md:h-screen text-center">
+            <div class="bg-gradient-to-tr w-full h-96 md:h-screen from-second to-transparent flex py-12 justify-center items-center">
                 
-                <div class=" flex justify-center flex-col gap-8 w-full items-center">
+                <div class=" flex md:justify-center flex-col md:gap-8 gap-3 w-full items-center ">
                     <img class="w-64" src="./assets/cropped-Logo-Escale-Bantoo-2-1.png" alt="">
-                    <a href="#" class="inline-block bg-eb text-white md:text-xl py-2 px-3 rounded-xl">S'inscrire a l'evenement</a>
+                    <a href="#" class="inline-block bg-eb text-white md:text-xl py-2 px-3 rounded-xl">S'inscrire</a>
                     <div class="flex gap-4">
                         <div class="day font-bold  md:text-3xl text-white bg-eb px-2 py-2 rounded-xl"></div>
                         <div class="hours font-bold  md:text-3xl text-white bg-eb px-2 py-2 rounded-xl"></div>
