--- a/escale.html
+++ b/escale.html
@@ -119,11 +119,11 @@
         <div class="hero__img_bg ">
           <div class="grid grid-cols-2 ml-64">
             <div class="center-img ">
-              <img src="./assets//LE PROGRAMME.jpg" class="h-full" alt="">
+              <img src="./assets//LE PROGRAMME_2.jpg" class="h-full" alt="">
             </div>
             <div class="overlay_img">
               <div class="right_img mt-32 ml-[-15px] w-48">
-                <img src="./assets/LE PROGRAMME_2.jpg" alt="">
+                <img src="./assets/LE PROGRAMME.jpg" alt="">
               </div>
               <div class="absolute right-0 z-20 top-10">
                 <figure class="">
