--- a/salon.html
+++ b/salon.html
@@ -22,7 +22,7 @@
           backgroundImage: {
             'teaserBg': "url('https://folio.webestica.com/assets/images/about/05.jpg')",
             'woodshape': "url('https://folio.webestica.com/assets/images/bg/pattern/05.png')",
-            'eventbg':"url('./assets/fame.jpg')"
+            'eventbg':"url('./assets/bandeau page Salon_2023.jpg')"
           },
           colors: {
             'eb': '#FF8E12',
@@ -99,7 +99,7 @@
           <a href="./edition.html" class="px-4 py-2 text-white bg-eb font-bold capitalize">L'edition 2023</a>
         </div>
       </nav>
-      <div class="bg-eventbg bg-contain bg-no-repeat w-screen md:h-screen h-96 lg:py-72 md:py-36 py-18  bg-center ">
+      <div class="bg-eventbg  bg-cover bg-no-repeat w-screen md:h-full h-96 lg:py-72 md:py-36 py-18  bg-center ">
         <div class="description text-white absolute md:top-12 lg:top-32 z-10 md:mx-16 mx-8 lg:mx-32">
           <h1 class="mt-7 w-2/3 lg:text-5xl md:text-2xl text-xl xs:text-lg font-bold">
             LE SALON DE L’ESCALE BANTOO
@@ -109,7 +109,7 @@
           </p>
           <a href="#" class="bg-eb p-3 mt-3 text-base capitalize font-bold"> contact us</a>
         </div>
-        <div class="shape-pipa h-full bg-black opacity-60 w-screen absolute bottom-0">
+        <div class="shape-pipa h-full bg-black bg-contain opacity-60 w-screen absolute bottom-0 top-0">
 
         </div>
       </div>
@@ -124,11 +124,11 @@
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
         <div class="relative h-full px-8 py-8 mt-9">
           <div class="relative">
-            <img src="./assets/Tony Mefe_4913.jpg" class=" relative" alt="">
-            <span
+            <img src="./assets/fame.jpg" class=" relative" alt="">
+            <!-- <span
               class="bg-eb absolute text-center md:inline-block right-3 hidden lg:block bottom-0 text-xl text-white origin-bottom -rotate-12 w-full px-1">
-              Tony Mefe 🤘
-            </span>
+              😎😎😊😊😉😉
+            </span> -->
           </div>
         </div>
 
